--- a/package.json
+++ b/package.json
@@ -3,5 +3,15 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1",
+    "npm-run-all": "^4.1.5"
+  },
+  "scripts": {
+  "start": "http-server ./ -p 5500",
+  "build:css": "tailwindcss build libs/src/tailwind.css -o libs/tailwindcss/tailwind.css",
+  "watch:css": "tailwindcss -i libs/src/tailwind.css -o libs/tailwindcss/tailwind.css --watch",
+  "dev": "npm-run-all --parallel start watch:css"
   }
 }
